k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle-catalog-service
  namespace: vehicle-platform
spec:
  replicas: 2
  selector:
    matchLabels: { app: vehicle-catalog-service }
  template:
    metadata: { labels: { app: vehicle-catalog-service } }
    spec:
      containers:
        - name: api
          image: ghcr.io/pedrohms-ap/vehicle-catalog-service:latest
          ports: [{ containerPort: 3001 }]
          readinessProbe: { httpGet: { path: /health, port: 3001 }, initialDelaySeconds: 5, periodSeconds: 10 }
          livenessProbe: { httpGet: { path: /health, port: 3001 }, initialDelaySeconds: 15, periodSeconds: 20 }
